# svd2rust

./: Cargo.toml  README.md
src/: generate.rs  lib.rs  list.rs  main.rs  tty.rs
