[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
build = "build.rs"
description = "Generate Rust register maps (`struct`s) from SVD files"
documentation = "https://github.com/japaric/svd2rust#svd2rust"
keywords = ["arm", "cortex-m", "register", "map", "generator"]
license = "MIT OR Apache-2.0"
name = "svd2rust"
repository = "https://github.com/japaric/svd2rust"
version = "0.1.1"

[[bin]]
doc = false
name = "svd2rust"
path = "src/main.rs"

[dependencies]
clap = "2.14.0"
inflections = "1.0.0"
quote = "0.3.3"
svd-parser = "0.1.1"
syn = "0.9"
term = "0.4"
term-painter = "0.2"
regex = "0.1"
libc = "0.2"
lazy_static = "0.2.2"
